增加提交产品色差

--- a/app.json
+++ b/app.json
@@ -1,11 +1,13 @@
-{
+ {
   "pages":[
+    "pages/login/login",
     "pages/index/index",
     "pages/index/submitProductColor/submitProductColor",
     "pages/index/check-product/check-product",
     "pages/index/check-product-color/check-product-color",
     "pages/index/earn/earn",
    
+
     "pages/index/check-scene/check-scene",
 
     "pages/index/protocol/protocol",
